# piano_transcription

./: .gitignore  main.py  pyproject.toml  test.py
assets/audio/: transcription.mid
src/: audio_processor.py  inference_realtime.py  play_midi_file.py
src/CQT_Pic/: CQT.py  pic_detection.py
src/model/: dataset.py  dataset_loader.py  mel _spectrogram.py  model.py  preprocess_datasets.py  training.py
