[project]
name = "piano-transcription"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "mido>=1.3.3",
    "numpy>=2.3.5",
    "pretty-midi>=0.2.11",
    "pyaudio>=0.2.14",
    "pygame>=2.6.1",
    "scipy>=1.16.3",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
]
